# self-hosted-standard-notes

./: README.md  docker-compose.yml
mariadb/: sample.env
mariadb-backup/: Dockerfile  entrypoint.sh  sample.env
mariadb-backup/scripts/: backup.sh  restore.sh
mariadb/init/: 01_notes.sh
notes-auth/: sample.env
notes-extensions/: nginx.conf
notes-extensions-updater/: Dockerfile  entrypoint.sh  pyproject.toml  sample.env  update  update.py
notes-gateway/: sample.env
notes-sync/: sample.env
restic/: Dockerfile  backup.sh  entry.sh  sample.env
traefik/: config.yml
